[package]
name = "yeetlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
axum-embed = "0.1.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
rust-embed = { version = "8.3.0", features = ["debug-embed"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple_logger = "4.3.3"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "io-util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
